--- a/style.css
+++ b/style.css
@@ -1,62 +1,81 @@
 body {
-  background-color: rgb(21, 21, 21); /* definir cor do corpo/site */
+  background-image: url(.//imagens/teste.png);
+  background-repeat: no-repeat;
+  background-size: cover;
   display: flex;
   flex-direction: column;
   align-items: center; /* alinhar itens */
   font-family: "Roboto", sans-serif;
 }
 
-h1 {
-  font-size: 25px;
-  align-items: center;
-  
-  display: block;
-  -webkit-text-fill-color: white;
-}
-
-.div-odin {
-  display: flex;
-  flex-direction: row;
-  /* align-items: center; */
+.titulo {
   background-color: rgb(52, 52, 52);
-  height: 650px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 413px;
+  border-radius: 20px;
 }
 
-p {
-  font-size: 20px;
-  text-align: center;
-  background: white;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
 
-.container1 {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 300px;
-  height: 600px;
-}
+  h1 {
+    text-align: center;
+    font-size: 25px;
+    background: white;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
 
-.container2 {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 300px;
-  height: 600px;
-}
-
-.food_img {
-  width: 128px; /* para setar largura */
-  height: 128px; /* para setar altura */
-}
-
-@media (max-width: 413px) {
   .div-odin {
+    margin-top: 10px;
     display: flex;
     flex-direction: row;
+    /* align-items: center; */
+    background-color: rgb(52, 52, 52);
     height: 650px;
-    width: 350px;
+    width: 413px;
+    border-radius: 20px;
+  }
+
+  p {
+    font-size: 20px;
+    text-align: center;
+    background: white;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
+
+  .container1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 300px;
+    height: 600px;
+  }
+
+  .container2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 300px;
+    height: 600px;
+  }
+
+  .food_img {
+    width: 128px; /* para setar largura */
+    height: 128px; /* para setar altura */
+  }
+
+  @media (max-width: 413px) {
+    .div-odin {
+      display: flex;
+      flex-direction: row;
+      height: 650px;
+      width: 350px;
+    }
+
+    .titulo {
+      width: 350px;
+    }
   }
 }
